--- a/.github/workflows/bumpTimestamp.yml
+++ b/.github/workflows/bumpTimestamp.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
      - uses: actions/checkout@v4
        with:
-         ref: ${{ github.event.pull_request.head.ref }}
+         ref: ${{ github.event.pull_request.head.sha }}
      
      - name: Get Current Timestamp
        id: timestamp
@@ -25,8 +25,8 @@ jobs:
           sed -i "s/\(\"SOURCE_DATE_EPOCH\": \"\)[0-9]\+\(\"\)/\1${{ env.CURRENT_TS }}\2/" org.jaspstats.JASP.json
 
      - name: Commit Changes
-       env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       # env:
+       #    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        run: |
           git config user.name "github-actions"
           git config user.email "actions@users.noreply.github.com"
