--- a/.github/workflows/bumpTimestamp.yml
+++ b/.github/workflows/bumpTimestamp.yml
@@ -28,8 +28,8 @@ jobs:
        # env:
        #    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        run: |
-          git config user.name "github-actions"
-          git config user.email "actions@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add org.jaspstats.JASP.json
           git commit -m "Automatically update SOURCE_DATE_EPOCH to ${{ env.CURRENT_TS }}"
           git push
